# cpp-template

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  meson.build  premake5.lua
helloworld/: CMakeLists.txt  premake5.lua
helloworld/src/: main.cpp
